# BancosBrasileiros

./: .deepsource.toml  .editorconfig  .gitattributes  .gitignore  .lycheeignore  .pypirc  .wakatime-project  BancosBrasileiros.nuspec  BancosBrasileiros.sln  BancosBrasileiros.sln.DotSettings  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dados.txt  MANIFEST.in  PIXEEBOT_ACTIVITY_DASHBOARD.md  README.en.md  README.md  README.nuget.md  README.pt-br.md  Rakefile  SECURITY.md  _config.yml  appveyor.yml  bancos.csv  bancos.json  bancos.schema.json  bancos.sql  bancos.xml  bancos_brasileiros.gemspec  changeLog.txt  composer.json  insert.sql  list_banks.json  package-lock.json  package.json  pubspec.yaml  pullRequest.txt  pyproject.toml  (+5 more)
.config/: dotnet-tools.json
.githooks/: pre-commit  prepare-commit-msg
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: run.yml  (+26 more)
BancosBrasileiros.MergeTool/: BancosBrasileiros.MergeTool.csproj  Bank.cs  Banks.cs  Comparer.cs  Program.cs  Reader.cs  Seeder.cs  Worker.cs  Writer.cs
TempData/: bancos-cnpj.md  bancos-ispb.md  bancos-site.md
assets/: bancos.json
data/: bancos.csv  bancos.json  bancos.md  bancos.sql  bancos.xml
docs/: ACTIVITY_DASHBOARD.md
example/: bancos_brasileiros_example.dart
public/: index.html  manifest.json
schemas/: Bank.php  csharp.cs  dart.dart  go.go  java.java  javascript.js  kotlin.kt  php.php  python.py  rust.rs  schema.json  schema.sql  schema.xml  typescript.ts
src/: App.js  Bank.php  dashboard.html  lib.rs  schemas.ts
test/: bancos_brasileiros_test.dart
(+58 files in other folders)
