 [package]
 name = "bancos_brasileiros"
 version = "5.0.0"
 authors = ["Guilherme Branco Stracini <opensource@straccini.com>"]
 edition = "2021"
 description = "Brazilian commercial banks list"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/username/repository"

 [dependencies]
 # Add any crate dependencies here
